FIX- nowrap to navbar

--- a/app.css
+++ b/app.css
@@ -68,6 +68,7 @@ header.row{
   justify-content: space-between;
   height: 100%;
   padding: 20px;
+  flex-wrap: nowrap;
 }
 
 /* CONTAINER */
@@ -98,7 +99,7 @@ a.button {
 }
 
 .cards-section{
-  flex-grow: 1;
+  /* flex-grow: 1; */
   background-color: #131923;
 }
 
@@ -117,7 +118,7 @@ a.button {
 }
 
 .text-section{
-  flex-grow: 4;
+  /* flex-grow: 4; */
   background-color: #131923;
 }
 
